Change text home and speed text in header home

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -97,21 +97,21 @@
           <div class="service-box-heading">
             <span><em class="icon"><i class="fa fa-book blue"></i></em>Encontrá lo que<br>buscás</span>
           </div>
-          <p>Hubin cuenta con información curada y de calidad al servicio de la comunidad.<br/>
-            ¡Encontrá en nuestro catálogo lo que estás buscando.!
+          <p>Hubin cuenta con información de calidad al servicio de la comunidad.<br/>
+            ¡Encontrá en nuestro catálogo lo que estás buscando!
           </p>
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="service-box-heading">
             <span><em class="icon"><i class="fa fa-group blue"></i></em>Compartí tu material con la comunidad</span>
           </div>
-          <p>La comunidad es el bien más valioso de Hubin y nuestro catálogo se nutre de ella.<br>¡Compartí tu material y se parte de ella!</p>
+          <p>La comunidad es el bien más valioso de Hubin y nuestro catálogo se nutre de ella.<br>¡Compartí tu material y sé parte!</p>
         </div>
         <div class="col-md-4 col-sm-4">
           <div class="service-box-heading">
-            <span><em class="icon"><i class="fa fa-trophy blue"></i></em>Participá activamente y obtené beneficios</span>
+            <span><em class="icon"><i class="fa fa-trophy blue"></i></em>Participá y obtené beneficios</span>
           </div>
-          <p>Subí material, puntuá material existente, denuncia plagio o material inadecuado.<br/> ¡Participá activamente en Hubin y obtené beneficios!.</p>
+          <p>Subí material, puntuá material existente y denunciá plagio o material inadecuado.<br/> ¡Participá en Hubin y obtené beneficios!</p>
         </div>
       </div>
     </div>
