Fix login and add consume api get alumno

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,23 +1,23 @@
 <div id="login" class="section container">
     <div class="row">
         <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 login-signup-page">
-            <form id="loginForm">           
+            <form id="loginForm">
                 <h2>Login</h2>
                 <div class="error main-error js-form-error"></div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
                     <input class="form-control js-user"  type="text" name="user" placeholder="Ingrese su usuario">
                     <span class="error js-user-error"></span>
-                </div>                    
+                </div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                     <input type="password" class="form-control js-password" placeholder="Password" type="password" name="password">
                     <span class="error  js-password-error"></span>
-                </div>                    
+                </div>
 
                 <div class="row">
                     <div class="col-md-offset-6 col-sm-offset-6 col-md-6 col-sm-6">
-                        <button type="submit" class="btn theme-btn pull-right submit-login">Ingresar</button>                        
+                        <button type="submit" class="btn theme-btn pull-right submit-login">Ingresar</button>
                     </div>
                 </div>
                 <hr>
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
-                        <a class="link-registro" href="#/registro">Aún no tengo una cuenta</a>
+                        <a class="link-registro" href="#/register">Aún no tengo una cuenta</a>
                     </div>
                 </div>
             </form>
