--- a/app/views/register.html
+++ b/app/views/register.html
@@ -6,20 +6,19 @@
     </div>
     <div class="row">
         <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 login-signup-page">
-            <form id="registroForm" >           
-
+            <form id="registerForm">
                 <h2>Registro</h2>
                 <div class="error main-error js-form-error"></div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
                     <input class="form-control js-username"  type="text" name="usuario" placeholder="Usuario">
                     <span class="error js-username-error"></span>
-                </div>  
+                </div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
                     <input class="form-control js-email"  type="email" name="email" placeholder="Email">
                     <span class="error js-email-error"></span>
-                </div>    
+                </div>
                 <div class="input-group margin-bottom-20">
                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
                     <input type="password" class="form-control js-password" placeholder="Password" type="password" name="password">
@@ -30,15 +29,12 @@
                     <input type="password" class="form-control js-password-repeat" placeholder="Repetir password" name="passwordRepeat">
                     <span class="error js-password-repeat-error"></span>
                 </div>
-
                 <div class="row">
                     <div class="col-md-12">
-                        <button type="submit" class="btn theme-btn pull-right submit-register">Registrarse</button>                        
+                        <button type="submit" class="btn theme-btn pull-right submit-register">Registrarse</button>
                     </div>
                 </div>
-
                 <hr>
-
                 <div class="login-socio">
                     <p class="text-muted">o ingresar con:</p>
                     <ul class="social-icons">
