--- a/app/views/user.html
+++ b/app/views/user.html
@@ -1,9 +1,58 @@
 <section id="user">
-  <div id="headerUser">
+  <div id="headerUser" style="margin-bottom: 40px;margin-top:20px;">
     <div class="container">
-      <div class="row">
+      <div id="infoUser" class="row" >
         <div class="col-md-12">
-          Hola
+          <div class="image-user col-md-2" style="padding-top: 20px;">
+            <img src="images/anon-user.jpg" class="img-responsive"/>
+          </div>
+          <div class="content-user col-md-6" style="padding-top: 20px;">
+            <div class="user-username" style="font-size: 22px;margin-bottom: 20px;">
+              Juliansci
+            </div>
+            <div class="user-field">
+              Email: an email
+            </div>
+            <div class="user-field">
+              Name: juancito
+            </div>
+            <div class="user-field">
+              Description: not have a description
+            </div>
+          </div>
+          <div class="col-md-4">
+            <h2>Medallas</h2>
+            <div class="content-medals">
+              <div class="medal">Medal 1</div>
+              <div class="medal">Medal 2</div>
+              <div class="medal">Medal 3</div>
+              <div class="medal">Medal 4</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="myDocuments" class="row">
+        <div class="col-md-12">
+          <h1>Mis documentos</h1>
+          <div class="description">
+            No tiene documentos subidos.
+          </div>
+        </div>
+      </div>
+      <div id="myActivity" class="row">
+        <div class="col-md-12">
+          <h1>Mi actividad</h1>
+          <div class="description">
+            No tiene actividad reciente.
+          </div>
+        </div>
+      </div>
+      <div id="myFavs" class="row">
+        <div class="col-md-12">
+          <h1>Mi favoritos</h1>
+          <div class="description">
+            No tiene favoritos.
+          </div>
         </div>
       </div>
     </div>
