--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,14 +10,14 @@
           </div>
           <div class="search-container">
             <div class="search">
-              <form class="form-inline" action="#">
+              <form class="form-inline" action="#" ng-submit="searchDocument()">
                 <div class="input-group">
                   <div class="input-cont">
                     <input class="form-control" type="text" placeholder="¿Qué estás buscando?"
                            ng-model="searchDocumentName">
                   </div>
                   <span class="input-group-btn">
-                            <button class="btn btn-default theme-btn" type="button" ng-click="searchDocument()">
+                            <button class="btn btn-default theme-btn" type="submit">
                                 Buscar
                                 <i class="m-icon-swapright m-icon-white"></i>
                             </button>
