--- a/app/views/search.html
+++ b/app/views/search.html
@@ -117,6 +117,9 @@
               </a>
             </div>
           </div>
+          <div ng-if="documents.length == 0" class="filter without-documents">
+            No se encontraron documentos con los filtros especificados.
+          </div>
         </div>
       </div>
 
